syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

// 所有精英副本信息
message CGEliteDuplicateInfoProto {
	optional int32 msgType = 1[default = 25201];//协议号
}
