syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符

// 精英副本购买步数
message GCEliteDuplicateBuyStepsProto {
	optional int32 msgType = 1[default = 25207];//协议号
	optional int32 status = 2;// 结果状态。10000成功；9999钻石不足；10203没有步数购买次数
	optional int32 eliteId = 3;// 精英副本Id（城市Id）
	optional int32 leftSteps = 4;// 剩余步数
}
